--- a/src/css/Home.module.css
+++ b/src/css/Home.module.css
@@ -176,9 +176,9 @@ audio {
 
 .portfolio_flex {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
-  row-gap: 30px;
+  gap: 30px;
 }
 
 .portfolio_flex > div {
